Migrate Spring MVC to Spring WebFlux for reactive API
This commit migrates the entire REST API layer from Spring MVC to Spring WebFlux,
introducing reactive programming patterns with Project Reactor (Mono/Flux).

Changes:
- Updated pom.xml: spring-boot-starter-web -> spring-boot-starter-webflux
- Updated pom.xml: springdoc-openapi-starter-webmvc-ui -> springdoc-openapi-starter-webflux-ui
- Migrated CorsConfig from WebMvcConfigurer to CorsWebFilter (reactive)
- Updated GlobalExceptionHandler to return Mono<ResponseEntity<?>> for all handlers
- Replaced MethodArgumentNotValidException with WebExchangeBindException for WebFlux validation

Created ReactiveRepositoryWrapper service:
- Wraps all blocking JPA repository calls with Mono/Flux
- Isolates blocking database operations on Schedulers.boundedElastic()
- Provides reactive methods for all repository operations across Image, Drive, Tag, CrawlJob entities
- Includes count operations, pagination support, and custom query wrappers

Migrated all 6 controllers (27 endpoints) to reactive signatures:
1. TagController: All CRUD operations return Mono<ResponseEntity<?>>
2. SystemController: Status and health endpoints return Mono with parallel Mono.zip for aggregation
3. ImageController: Search with JPA Specifications wrapped reactively
4. CrawlerController: Job management with reactive repository and service wrappers
5. DriveController: All drive operations wrapped with Mono.fromCallable on boundedElastic
6. FileController: File streaming wrapped reactively (blocking I/O on boundedElastic)

Implementation strategy:
- All controller methods now return Mono<ResponseEntity<?>> or Flux<?>
- JPA repository calls isolated via ReactiveRepositoryWrapper with Schedulers.boundedElastic()
- Service layer calls wrapped in Mono.fromCallable() for compatibility during migration
- File I/O operations (streaming images, thumbnails) use boundedElastic scheduler
- Maintained backward compatibility by keeping existing service layer blocking fo